--- a/Windows-11-сборки.html
+++ b/Windows-11-сборки.html
@@ -48,7 +48,7 @@
         <p class="u-enable-responsive u-text u-text-default u-text-1">
           <a class="u-btn u-button-link u-button-style u-none u-text-body-alt-color u-btn-1" href="Сборки-от-Аддерли.html" data-page-id="25875748">Сборки от Аддерли</a>
         </p>
-        <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1" data-submenu-level="on-click">
+        <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1" data-submenu-level="on-click" data-responsive-from="MD">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
             <a class="u-button-style u-custom-active-color u-custom-border-color u-custom-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
               <svg class="u-svg-link" viewBox="0 0 24 24"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use></svg>
@@ -138,28 +138,24 @@
       <div class="u-clearfix u-sheet u-sheet-1">
         <h1 class="u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-white u-text-1">Сборки Windows 11<br>
         </h1>
-        <h6 class="u-text u-text-default u-text-white u-text-2">Windows 11 Pro V2 22H2 by Adderly (10.10.2022)<br>
+        <h6 class="u-text u-text-default u-text-white u-text-2">Windows 11 Pro V3 22H2 by Adderly (15.01.2023)<br>
         </h6>
-        <img class="u-expanded-width-md u-expanded-width-sm u-image u-image-default u-preserve-proportions u-image-1" src="images/Windows11-2022-10-10-18-07-20.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-expanded-width-md u-expanded-width-sm u-image u-image-default u-preserve-proportions u-image-2" src="images/Windows11-2022-10-10-18-07-29.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-3" src="images/2022-08-15212113.png" alt="" data-image-width="545" data-image-height="293">
-        <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-4" src="images/2022-08-15211852.png" alt="" data-image-width="815" data-image-height="373">
-        <p class="u-align-center-xl u-text u-text-white u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же Reg файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото, чтобы отключать и включать обновления. <br>
+        <img class="u-expanded-width-md u-expanded-width-sm u-image u-image-default u-preserve-proportions u-image-1" src="images/Windows10x642-2023-01-16-14-58-45.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-md u-expanded-width-sm u-image u-image-default u-preserve-proportions u-image-2" src="images/Windows10x642-2023-01-16-15-11-53.png" alt="" data-image-width="1366" data-image-height="768">
+        <p class="u-align-center-xl u-text u-text-white u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных программ.&nbsp;<br>
           <br>Удалены приложения "Почта, Люди, One Note, Get Started, Камера"<br>
-          <br> Интеграции: <br>Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64<br>
-          <br>Включён DirectPlay<br>
-          <br>Добавлен диспетчер задач в ПКМ по рабочему столу<br>(по желанию можно выключить)<br>
-          <br>Образ весит 6.28 GB, после установки Windows занимает 20.1 GB<br>
-          <br>Образ основан на официальном MSDN Windows 11 v2 22H2 (22621.382)<br>Инсталятор использован от моей предыдущей сборки 22000.194, дабы не было проверки!<br>Проверка отключена в этой сборке, и смотреть как обходить проверку на моей сборке вам не потребуется!<br>
+          <br> Интеграции в коробке: <br>Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64<br>
+          <br>Образ весит 5.9 GB, после установки Windows занимает около 20 ГБ.<br>
+          <br>Образ основан на официальном MSDN Windows 11 22H2 (22621.525)<br>Как обойти проверку - есть туториал по кнопке ниже.
         </p>
-        <a href="https://drive.google.com/file/d/1bu4QBuol3D_iQvFdyY0ZrFqaXsmOWTzO/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-1" target="_blank">Скачать ​Windows 11 Pro V2 22H2 by Adderly</a>
+        <a href="https://drive.google.com/file/d/12SIdi-O2WP9Tl9HZpjQw-OeqY9kiJuBk/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-1" target="_blank">Скачать ​Windows 11 Pro V3 22H2 by Adderly</a>
         <a href="Как-обойти-проверку-Windows-11.html" data-page-id="89124304" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-4 u-radius-50 u-btn-2">Как обойти проверку Windows 11</a>
         <h6 class="u-text u-text-default u-text-white u-text-4">Windows 11 Pro V3 21H2 by Adderly (15.08.2022)<br>
         </h6>
-        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-5" src="images/Windows11byAdderly-2022-08-15-21-31-17.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-6" src="images/Windows11byAdderly-2022-08-15-21-30-26.png" alt="" data-image-width="1366" data-image-height="768">
-        <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-7" src="images/2022-08-15212113.png" alt="" data-image-width="545" data-image-height="293">
-        <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-8" src="images/2022-08-15211852.png" alt="" data-image-width="815" data-image-height="373">
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-3" src="images/Windows11byAdderly-2022-08-15-21-31-17.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-preserve-proportions u-image-4" src="images/Windows11byAdderly-2022-08-15-21-30-26.png" alt="" data-image-width="1366" data-image-height="768">
+        <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-5" src="images/2022-08-15212113.png" alt="" data-image-width="545" data-image-height="293">
+        <img class="u-expanded-width-sm u-expanded-width-xs u-image u-image-default u-image-6" src="images/2022-08-15211852.png" alt="" data-image-width="815" data-image-height="373">
         <p class="u-align-center-xl u-text u-text-white u-text-5"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных и авторских программ, а так же Reg файлы, чтобы редактировать проводник и вернуть старый просмотрщик фото, чтобы отключать и включать обновления. <br>
           <br>Удалены приложения "Почта, Люди, One Note, Get Started, Камера"<br>
           <br> Интеграции: <br>Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64 <br>Framework 4.8, 4.7.2, 3.5, 3.0, 2.0<br>
@@ -176,11 +172,19 @@
       </div>
     </section>
     <section class="u-align-center-xs u-black u-clearfix u-hidden-lg u-hidden-md u-hidden-sm u-hidden-xl u-section-2" id="sec-29e3">
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-text u-text-1">В связи с тем что у разных людей разный DPI на мобильных устройствах,<br>я принял решение убрать возможность просматривать страницы сборок на телефонах.<br>
-          <br>Чтобы посмотреть эту и остальные страницы:<br>
-          <br>Включи "Версия для ПК"<br>У себя в браузере.
+      <div class="u-align-left-xs u-clearfix u-sheet u-sheet-1">
+        <p class="u-align-center-xl u-text u-text-white u-text-1"> Добавлена папка "от Марка Аддерли", в которой находятся инсталяторы полезных программ.&nbsp;<br>
+          <br>Удалены приложения "Почта, Люди, One Note, Get Started, Камера"<br>
+          <br> Интеграции в коробке: <br>Microsoft Visual Studio Redistributable 2005, 2008, 2010, 2012, 2013, 2015 - 2022, x86 и x64<br>
+          <br>Образ весит 5.9 GB, после установки Windows занимает около 20 ГБ.<br>
+          <br>Образ основан на официальном MSDN Windows 11 22H2 (22621.525)<br>Как обойти проверку - есть туториал по кнопке ниже.
+        </p>
+        <h1 class="u-align-center-xs u-text u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-white u-text-2">Сборки Windows 11<br>
         </h1>
+        <h6 class="u-align-center-xs u-text u-text-default u-text-white u-text-3">Windows 11 Pro V3 22H2 by Adderly (15.01.2023)<br>
+        </h6>
+        <a href="https://drive.google.com/file/d/12SIdi-O2WP9Tl9HZpjQw-OeqY9kiJuBk/view?usp=sharing" class="u-active-palette-1-dark-2 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-12 u-radius-50 u-btn-1" target="_blank">Скачать ​Windows 11 Pro V3 22H2 by Adderly</a>
+        <a href="Как-обойти-проверку-Windows-11.html" data-page-id="89124304" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-4 u-radius-50 u-btn-2">Как обойти проверку Windows 11</a>
       </div>
     </section>
     
