--- a/Windows-7-сборки.html
+++ b/Windows-7-сборки.html
@@ -48,7 +48,7 @@
         <p class="u-enable-responsive u-text u-text-default u-text-1">
           <a class="u-btn u-button-link u-button-style u-none u-text-body-alt-color u-btn-1" href="Сборки-от-Аддерли.html" data-page-id="25875748">Сборки от Аддерли</a>
         </p>
-        <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1" data-submenu-level="on-click">
+        <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1" data-submenu-level="on-click" data-responsive-from="MD">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
             <a class="u-button-style u-custom-active-color u-custom-border-color u-custom-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
               <svg class="u-svg-link" viewBox="0 0 24 24"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use></svg>
@@ -155,7 +155,7 @@
           <br>Образ основан на официальном MSDN Windows 7.<br>
           <br>Чтобы работали темы в сборке, нужно докачать патчер ниже.
         </p>
-        <a href="https://drive.google.com/file/d/12O6iCwCWXKQ3IpHc8E4DFkPGBZumUcKq/view?usp=sharing" class="u-active-palette-4-base u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-13 u-radius-50 u-btn-1" target="_blank">Скачать Windows 7 Ultimate V6 by Adderly [Временно недоступен]</a>
+        <a href="https://drive.google.com/file/d/1G_4sY9NJS8nGJwXkuJyDVmhwmNyS0WbC/view?usp=sharing" class="u-active-palette-4-base u-btn u-btn-round u-button-style u-custom-color-11 u-hover-custom-color-13 u-radius-50 u-btn-1" target="_blank">Скачать Windows 7 Ultimate V6 by Adderly</a>
         <a href="https://www.mediafire.com/file/t78spt68gorstmd/UniversalThemePatcher.exe/file" class="u-active-grey-50 u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-hover-black u-radius-50 u-btn-2" target="_blank">Скачать Universal Theme Patcher для тем Windows 7</a>
         <p class="u-text u-text-default u-text-white u-text-4">Смотрите так же:</p>
         <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-8 u-radius-50 u-btn-3">Сборки Windows 8.1</a>
