--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <p class="u-enable-responsive u-text u-text-default u-text-1">
           <a class="u-btn u-button-link u-button-style u-none u-text-body-alt-color u-btn-1" href="Сборки-от-Аддерли.html" data-page-id="25875748">Сборки от Аддерли</a>
         </p>
-        <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1" data-submenu-level="on-click">
+        <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1" data-submenu-level="on-click" data-responsive-from="MD">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
             <a class="u-button-style u-custom-active-color u-custom-border-color u-custom-color u-custom-hover-color u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-text-active-color u-custom-text-hover-color u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
               <svg class="u-svg-link" viewBox="0 0 24 24"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use></svg>
@@ -136,7 +136,21 @@
           </div>
         </nav>
       </div></header>
-    <section class="u-align-center u-clearfix u-hidden-sm u-hidden-xs u-image u-section-1" id="sec-a9a5" data-image-width="1080" data-image-height="1920">
+    <section class="u-align-center-sm u-align-center-xs u-clearfix u-hidden-lg u-hidden-md u-hidden-xl u-image u-section-1" id="sec-e1fc" data-image-width="1080" data-image-height="1920">
+      <div class="u-clearfix u-sheet u-sheet-1">
+        <h1 class="u-text u-text-white u-text-1">
+          <span style="font-weight: 400;">Сборки от Марка Аддерли<br>В которых нет мусора, телеметрии, и яндексов.
+          </span>
+          <br>
+        </h1>
+        <h2 class="u-text u-text-white u-text-2">Для навигации по страницам,<br>Используйте меню справа!
+        </h2>
+        <a href="https://t.me/adderlywindows" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-24 u-radius-50 u-btn-1" target="_blank">Сборки от Аддерли Telegram</a>
+        <a href="https://www.youtube.com/channel/UCHPOaRG5Z59pOmXud5W4N5g" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-25 u-radius-50 u-btn-2" target="_blank">Сборки от Аддерли YouTube</a>
+        <a href="https://new.donatepay.ru/@madderly" class="u-active-black u-border-none u-btn u-btn-round u-button-style u-custom-color-14 u-hidden-xs u-hover-custom-color-28 u-radius-50 u-btn-3" target="_blank"> Поддержи желание и мотивацию создавать сборки! </a>
+      </div>
+    </section>
+    <section class="u-align-center u-clearfix u-hidden-sm u-hidden-xs u-image u-section-2" id="sec-a9a5" data-image-width="1080" data-image-height="1920">
       <div class="u-clearfix u-sheet u-sheet-1">
         <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-6 u-hidden-lg u-hidden-md u-hidden-xl u-radius-50 u-btn-1" target="_blank">Сборки Windows 8.1</a>
         <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-6 u-hidden-lg u-hidden-md u-hidden-xl u-radius-50 u-btn-2" target="_blank">Сборки Windows 8.0</a>
@@ -375,39 +389,8 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
         <a href="https://new.donatepay.ru/@madderly" class="u-active-black u-border-none u-btn u-btn-round u-button-style u-custom-color-14 u-hover-custom-color-28 u-radius-50 u-btn-22" target="_blank"> Поддержи желание и мотивацию создавать сборки! </a>
       </div>
     </section>
-    <section class="u-align-center-sm u-align-center-xs u-clearfix u-hidden-lg u-hidden-md u-hidden-xl u-image u-section-2" id="sec-3eef" data-image-width="1080" data-image-height="1920">
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-text u-text-white u-text-1">
-          <span style="font-weight: 400;">Сборки от Марка Аддерли<br>В которых нет мусора, телеметрии, и яндексов.
-          </span>
-          <br>
-        </h1>
-        <h2 class="u-text u-text-white u-text-2">Выбери раздел с сборками Windows...</h2>
-        <a href="Windows-11-сборки.html" data-page-id="54493442" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-16 u-radius-50 u-btn-1">Сборки Windows 11</a>
-        <a href="Windows-10-сборки.html" data-page-id="479509282" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-16 u-radius-50 u-btn-2">Сборки Windows 10</a>
-        <a href="Windows-8-1-сборки.html" data-page-id="284724531" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-16 u-radius-50 u-btn-3">Сборки Windows 8.1</a>
-        <a href="Windows-8-0-сборки.html" data-page-id="256727684" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-16 u-radius-50 u-btn-4">Сборки Windows 8.0</a>
-        <a href="Windows-7-сборки.html" data-page-id="95331361" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-16 u-radius-50 u-btn-5">Сборки Windows 7</a>
-        <a href="Windows-XP-сборки.html" data-page-id="1493610735" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-16 u-radius-50 u-btn-6">Сборки Windows XP</a>
-        <a href="Windows-11-сборки.html" data-page-id="54493442" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-16 u-radius-50 u-btn-7">Сборки Windows Lite</a>
-        <a href="Windows-11-сборки.html" data-page-id="54493442" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-16 u-radius-50 u-btn-8">Windows PE</a>
-        <h2 class="u-text u-text-white u-text-3"> Другие страницы, которые могут быть полезны!</h2>
-        <a href="Информация-о-сборках.html" data-page-id="254799920" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-5 u-radius-50 u-btn-9" target="_blank">Информация о Сборках от Аддерли</a>
-        <a href="Софт-от-Аддерли.html" data-page-id="21398082" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-1 u-radius-50 u-btn-10" target="_blank">Софт от Аддерли</a>
-        <a href="Библиотека-Образов.html" data-page-id="74119563" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-11 u-radius-50 u-btn-11" target="_blank">Библиотека образов Windows</a>
-        <a href="Обновления-для-Windows.html" data-page-id="72177041" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-13 u-radius-50 u-btn-12" target="_blank">Обновления Windows</a>
-        <a href="Ключи-от-Аддерли.html" data-page-id="271508222" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-21 u-radius-50 u-btn-13" target="_blank">Ключи от Аддерли</a>
-        <a href="Старые-версии-Windows.html" data-page-id="576721080" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-26 u-radius-50 u-btn-14" target="_blank">Старые Windows</a>
-        <a href="СтарыйСофт-для-Windows-XPVista.html" data-page-id="41070472" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-23 u-radius-50 u-btn-15" target="_blank">Старый софт для Windows XP</a>
-        <a href="Windows-Lite-x32-сборки.html" data-page-id="82559784" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-6 u-radius-50 u-btn-16" target="_blank">Сборки Windows Lite x32</a>
-        <a href="Проверка-на-целостность.html" data-page-id="281617986" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-22 u-radius-50 u-btn-17" target="_blank">Старые проверки на целостность</a>
-        <a href="https://t.me/adderlywindows" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-24 u-radius-50 u-btn-18" target="_blank">Сборки от Аддерли Telegram</a>
-        <a href="https://www.youtube.com/channel/UCHPOaRG5Z59pOmXud5W4N5g" class="u-border-none u-btn u-btn-round u-button-style u-custom-color-25 u-radius-50 u-btn-19" target="_blank">Сборки от Аддерли YouTube</a>
-        <a href="https://new.donatepay.ru/@madderly" class="u-active-black u-border-none u-btn u-btn-round u-button-style u-custom-color-14 u-hidden-xs u-hover-custom-color-28 u-radius-50 u-btn-20" target="_blank"> Поддержи желание и мотивацию создавать сборки! </a>
-      </div>
-    </section>
     <section class="u-clearfix u-grey-80 u-section-3" id="sec-f0ab">
-      <div class="u-clearfix u-sheet u-sheet-1">
+      <div class="u-clearfix u-sheet u-valign-middle-xs u-sheet-1">
         <div class="u-clearfix u-expanded-width u-layout-wrap u-layout-wrap-1">
           <div class="u-layout">
             <div class="u-layout-row">
