--- a/Сборки-от-Аддерли.html
+++ b/Сборки-от-Аддерли.html
@@ -122,7 +122,7 @@
           <br>Вес образа - 5.75 ГБ,<br>после установки около 16 ГБ<br>(в зависимости от драйверов)
         </h3>
         <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/AdderlyOS%20Alisa%2022621%20525%20x64%20%5Brutracker-6327753%5D.torrent" class="u-active-black u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-28 u-radius-50 u-btn-2" target="_blank">Скачать торрентом</a>
-        <a href="404.html" data-page-id="1800220873" class="u-active-black u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-28 u-radius-50 u-btn-3" target="_blank">Скачать через GDrive</a>
+        <a href="https://drive.google.com/file/d/15NbgWZTAjpLke2d8LXQGsQe1chqNnubV/view?usp=sharing" class="u-active-black u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-28 u-radius-50 u-btn-3" target="_blank">Скачать через GDrive</a>
         <a href="Как-обойти-проверку-Windows-11.html" data-page-id="89124304" class="u-active-black u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-28 u-radius-50 u-btn-4" target="_blank">Как обойти проверку Win11</a>
         <a href="https://new.donatepay.ru/@madderly" class="u-active-black u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-5 u-radius-50 u-btn-5" target="_blank">Поддержать!</a>
         <a href="https://www.youtube.com/channel/UCkZGHAAwJelXw_HgQ_kq0YQ" class="u-active-black u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-26 u-radius-50 u-btn-6" target="_blank">Мой основной YouTube канал</a>
@@ -194,7 +194,7 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
           </div>
         </div>
         <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/AdderlyOS%20Alisa%2022621%20525%20x64%20%5Brutracker-6327753%5D.torrent" class="u-active-black u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-28 u-radius-50 u-btn-11" target="_blank">Скачать торрентом</a>
-        <a href="404.html" data-page-id="1800220873" class="u-active-black u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-28 u-radius-50 u-btn-12" target="_blank">Скачать через GDrive</a>
+        <a href="https://drive.google.com/file/d/15NbgWZTAjpLke2d8LXQGsQe1chqNnubV/view?usp=sharing" class="u-active-black u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-28 u-radius-50 u-btn-12" target="_blank">Скачать через GDrive</a>
         <a href="Как-обойти-проверку-Windows-11.html" data-page-id="89124304" class="u-active-black u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-28 u-radius-50 u-btn-13" target="_blank">Как обойти проверку Windows 11 22H2</a>
         <a href="https://new.donatepay.ru/@madderly" class="u-active-black u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-5 u-radius-50 u-btn-14" target="_blank"> Поддержи желание и мотивацию создавать сборки! </a>
         <a href="https://www.youtube.com/channel/UCkZGHAAwJelXw_HgQ_kq0YQ" class="u-active-black u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-26 u-radius-50 u-btn-15" target="_blank">Мой основной YouTube канал</a>
