--- a/Сборки-от-Аддерли.html
+++ b/Сборки-от-Аддерли.html
@@ -101,7 +101,7 @@
         </nav>
       </div></header>
     <section class="u-align-center-sm u-align-center-xs u-black u-clearfix u-hidden-lg u-hidden-md u-hidden-xl u-section-1" id="sec-e1fc">
-      <div class="u-clearfix u-sheet u-valign-middle-sm u-sheet-1">
+      <div class="u-clearfix u-sheet u-sheet-1">
         <a href="https://www.youtube.com/channel/UCkZGHAAwJelXw_HgQ_kq0YQ" class="u-active-black u-border-none u-btn u-btn-round u-button-style u-custom-color-14 u-hidden-lg u-hidden-md u-hidden-sm u-hidden-xl u-hover-custom-color-28 u-radius-50 u-btn-1" target="_blank">Поддержать!</a>
         <h1 class="u-text u-text-white u-text-1">
           <span style="font-weight: 400;">Сборки от Марка Аддерли<br>В которых нет мусора, телеметрии, и яндексов.
@@ -110,19 +110,18 @@
         </h1>
         <h2 class="u-text u-text-2">AdderlyOS Alisa&nbsp;<br>Windows 11 Pro 22H2 22621.525
         </h2>
-        <img class="u-expanded-width-lg u-expanded-width-sm u-expanded-width-xl u-expanded-width-xs u-image u-image-default u-image-1" src="images/AdderlySAlisa-2023-02-25-00-50-07.png" alt="" data-image-width="1920" data-image-height="1080">
-        <img class="u-expanded-width u-image u-image-default u-image-2" src="images/AdderlySAlisa-2023-02-25-03-46-31.png" alt="" data-image-width="1920" data-image-height="1080">
-        <h3 class="u-align-center u-text u-text-3">Добавлена папка "от Марка Аддерли", в которой находятся инсталляторы разных программ и редистов. <br>
-          <br>Предустановлены AdderlyTyperPRO, Java, Mozilla Firefox, Telegram,  VLC,<br>MPC-HC, Ocam Screen Recorder, 7-Zip. <br>
-          <br>Удалены разные UWP приложения, остались только калькулятор, блокнот, будильники, Microsoft Store, Edge, и другие самые важные. <br>
-          <br>Удалены стрелочки у ярлыков на рабочем столе, а так же добавлен старый просмотрщик фото. <br>
-          <br>Включены по умолчанию секунды на панели задач, после установки StartAllBack который есть в папке, вы будете видеть точное время. <br>
-          <br>Теперь в центре обновления, вы никогда не будете автоматически обновляться, центр обновления сам будет только искать обновления. <br>Выключен контроль учетных записей, установка обновлений антивируса. <br>
+        <img class="u-expanded-width-lg u-expanded-width-sm u-expanded-width-xl u-expanded-width-xs u-image u-image-default u-image-1" src="images/Windows10x643-2023-03-03-00-23-25.png" alt="" data-image-width="1920" data-image-height="1080">
+        <img class="u-expanded-width u-image u-image-default u-image-2" src="images/Windows10x643-2023-03-03-00-30-29.png" alt="" data-image-width="1920" data-image-height="1080">
+        <h3 class="u-align-center-lg u-align-center-md u-align-center-xl u-text u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся инсталляторы разных программ и редистов. <br>
+          <br>Предустановлены AdderlyTyperPRO, Mozilla Firefox, Telegram,  VLC, MPC-HC, DriverHub для установки драйверов и 7-zip. <br>
+          <br>Удалены многие UWP приложения, остались только калькулятор, блокнот, будильники, Microsoft Store, Edge, и другие важные. <br>
+          <br>Теперь в центре обновления, вы никогда не будете автоматически обновляться, центр обновления сам будет только искать обновления. <br>Выключен контроль учетных записей, файрволл, установка обновлений антивируса, и автоустановка драйверов. <br>
+          <br>Интегрированы Microsoft Visual C++ Redistributable 2015-2022 x86 и x64.<br>
           <br>Добавлены темы, только две основные темы есть в системе, с уникальными звуками и курсором мыши.<br>
-          <br>Вес образа - 5.75 ГБ,<br>после установки около 16 ГБ<br>(в зависимости от драйверов)
+          <br>Вес образа - 5.71 ГБ, после установки около 12 ГБ<br>(в зависимости от драйверов)
         </h3>
-        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/AdderlyOS%20Alisa%2022621%20525%20x64%20%5Brutracker-6327753%5D.torrent" class="u-active-black u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-28 u-radius-50 u-btn-2" target="_blank">Скачать торрентом</a>
-        <a href="https://drive.google.com/file/d/15NbgWZTAjpLke2d8LXQGsQe1chqNnubV/view?usp=sharing" class="u-active-black u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-28 u-radius-50 u-btn-3" target="_blank">Скачать через GDrive</a>
+        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/torrents/AdderlyOS%20Alisa%20V2.torrent" class="u-active-black u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-28 u-radius-50 u-btn-2" target="_blank">Скачать торрентом</a>
+        <a href="https://drive.google.com/file/d/1rKbtgh26Wr_mFRQxwp6a3qkC3Q5aR5fw/view?usp=sharing" class="u-active-black u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-28 u-radius-50 u-btn-3" target="_blank">Скачать через GDrive</a>
         <a href="Как-обойти-проверку-Windows-11.html" data-page-id="89124304" class="u-active-black u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-28 u-radius-50 u-btn-4" target="_blank">Как обойти проверку Win11</a>
         <a href="https://new.donatepay.ru/@madderly" class="u-active-black u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-5 u-radius-50 u-btn-5" target="_blank">Поддержать!</a>
         <a href="https://www.youtube.com/channel/UCkZGHAAwJelXw_HgQ_kq0YQ" class="u-active-black u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-26 u-radius-50 u-btn-6" target="_blank">Мой основной YouTube канал</a>
@@ -153,17 +152,16 @@
           </span>
           <br>
         </h1>
-        <h2 class="u-text u-text-2">AdderlyOS Alisa [Windows 11 Pro 22H2 22621.525]</h2>
-        <img class="u-expanded-width-lg u-expanded-width-xl u-image u-image-default u-image-1" src="images/AdderlySAlisa-2023-02-25-00-50-07.png" alt="" data-image-width="1920" data-image-height="1080">
-        <img class="u-expanded-width u-image u-image-default u-image-2" src="images/AdderlySAlisa-2023-02-25-03-46-31.png" alt="" data-image-width="1920" data-image-height="1080">
-        <h3 class="u-align-center u-text u-text-3">Добавлена папка "от Марка Аддерли", в которой находятся инсталляторы разных программ и редистов. <br>
-          <br>Предустановлены AdderlyTyperPRO, Java, Mozilla Firefox, Telegram,  VLC,<br>MPC-HC, Ocam Screen Recorder, 7-Zip. <br>
-          <br>Удалены разные UWP приложения, остались только калькулятор, блокнот, будильники, Microsoft Store, Edge, и другие самые важные. <br>
-          <br>Удалены стрелочки у ярлыков на рабочем столе, а так же добавлен старый просмотрщик фото. <br>
-          <br>Включены по умолчанию секунды на панели задач, после установки StartAllBack который есть в папке, вы будете видеть точное время. <br>
-          <br>Теперь в центре обновления, вы никогда не будете автоматически обновляться, центр обновления сам будет только искать обновления. <br>Выключен контроль учетных записей, установка обновлений антивируса. <br>
+        <h2 class="u-text u-text-2">AdderlyOS Alisa V2 [Windows 11 Pro 22H2 22621.1265]</h2>
+        <img class="u-expanded-width-lg u-expanded-width-xl u-image u-image-default u-image-1" src="images/Windows10x643-2023-03-03-00-23-25.png" alt="" data-image-width="1920" data-image-height="1080">
+        <img class="u-expanded-width u-image u-image-default u-image-2" src="images/Windows10x643-2023-03-03-00-30-29.png" alt="" data-image-width="1920" data-image-height="1080">
+        <h3 class="u-align-center u-text u-text-3"> Добавлена папка "от Марка Аддерли", в которой находятся инсталляторы разных программ и редистов. <br>
+          <br>Предустановлены AdderlyTyperPRO, Mozilla Firefox, Telegram,  VLC, MPC-HC, DriverHub для установки драйверов и 7-zip. <br>
+          <br>Удалены многие UWP приложения, остались только калькулятор, блокнот, будильники, Microsoft Store, Edge, и другие важные. <br>
+          <br>Теперь в центре обновления, вы никогда не будете автоматически обновляться, центр обновления сам будет только искать обновления. <br>Выключен контроль учетных записей, файрволл, установка обновлений антивируса, и автоустановка драйверов. <br>
+          <br>Интегрированы Microsoft Visual C++ Redistributable 2015-2022 x86 и x64.<br>
           <br>Добавлены темы, только две основные темы есть в системе, с уникальными звуками и курсором мыши.<br>
-          <br>Вес образа - 5.75 ГБ, после установки около 16 ГБ<br>(в зависимости от драйверов)
+          <br>Вес образа - 5.71 ГБ, после установки около 12 ГБ<br>(в зависимости от драйверов)
         </h3>
         <div class="u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xl u-hidden-sm u-hidden-xs u-layout-horizontal u-list u-list-1">
           <div class="u-repeater u-repeater-1">
@@ -193,8 +191,8 @@ c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,24
             </a>
           </div>
         </div>
-        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/AdderlyOS%20Alisa%2022621%20525%20x64%20%5Brutracker-6327753%5D.torrent" class="u-active-black u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-28 u-radius-50 u-btn-11" target="_blank">Скачать торрентом</a>
-        <a href="https://drive.google.com/file/d/15NbgWZTAjpLke2d8LXQGsQe1chqNnubV/view?usp=sharing" class="u-active-black u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-28 u-radius-50 u-btn-12" target="_blank">Скачать через GDrive</a>
+        <a href="https://github.com/FineWorkCompany/sborkiadderly.github.io/raw/gh-pages/torrents/AdderlyOS%20Alisa%20V2.torrent" class="u-active-black u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-28 u-radius-50 u-btn-11" target="_blank">Скачать торрентом</a>
+        <a href="https://drive.google.com/file/d/1rKbtgh26Wr_mFRQxwp6a3qkC3Q5aR5fw/view?usp=sharing" class="u-active-black u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-28 u-radius-50 u-btn-12" target="_blank">Скачать через GDrive</a>
         <a href="Как-обойти-проверку-Windows-11.html" data-page-id="89124304" class="u-active-black u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-28 u-radius-50 u-btn-13" target="_blank">Как обойти проверку Windows 11 22H2</a>
         <a href="https://new.donatepay.ru/@madderly" class="u-active-black u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-5 u-radius-50 u-btn-14" target="_blank"> Поддержи желание и мотивацию создавать сборки! </a>
         <a href="https://www.youtube.com/channel/UCkZGHAAwJelXw_HgQ_kq0YQ" class="u-active-black u-border-none u-btn u-btn-round u-button-style u-custom-color-12 u-hover-custom-color-26 u-radius-50 u-btn-15" target="_blank">Мой основной YouTube канал</a>
